# devops-factory-actions

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  home.env.example  pyproject.toml
.github/workflows/: task1.yaml  task2.yaml  task3.yaml
jcasc/: casc.yaml  plugins.txt
myapp/: app.py
tests/: test_app.py
